--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KaiaCards - Gift Cards with USDT on Kaia</title>
+  <title>K Shop - Gift Card Marketplace</title>
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="alternate icon" href="/favicon.ico">
+  <link rel="mask-icon" href="/favicon.svg" color="#00ff41">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
